route.tf
resource "aws_route_table" "route_table" {
   vpc_id = aws_vpc.main.id

   route {
     cidr_block = "0.0.0.0/0"
     gateway_id = aws_internet_gateway.gw.id
   }

   tags = {
     Name = "route_table"
   }
 }

 resource "aws_route_table_association" "public_subnet_association_1a" {
   subnet_id      = aws_subnet.public_subnet_1a.id
   route_table_id = aws_route_table.route_table.id
 }
 resource "aws_route_table_association" "public_subnet_association_1b" {
   subnet_id      = aws_subnet.public_subnet_1b.id
   route_table_id = aws_route_table.route_table.id
 }
